force-app/main/default/objects/HI_Carrier__c/fields/Carrier_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Detail_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Detail Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>