force-app/main/default/objects/HI_Carrier__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>