force-app/main/default/objects/HI_Carrier__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>